--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "lenis": "^1.3.17",
     "next": "16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0"
