--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lenis": "^1.3.17",
     "next": "16.0.7",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "simple-icons": "^16.9.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
